fix: using divs instead of detail and summary for accordions fixed overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,6 +110,7 @@ span.name,
 }
 
 .archive-accordion {
+  width: 100%;
   font-size: 14px;
   border-bottom: 1px solid var(--stroke);
   overflow: hidden;
@@ -123,7 +124,7 @@ span.name,
   border: none;
 }
 
-.archive-accordion[open] {
+.archive-accordion.is-open {
   flex: 1 1 0;
   min-height: 0;
   overflow: hidden;
@@ -131,17 +132,19 @@ span.name,
   flex-flow: column nowrap;
 }
 
-.archive-accordion summary {
+.archive-accordion-summary {
+  width: 100%;
   cursor: pointer;
   padding: 16px 24px;
   background-color: var(--foreground);
   display: flex;
+  flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
   flex: 0 0 auto;
 }
 
-.archive-accordion[open] summary {
+.archive-accordion.is-open .archive-accordion-summary {
   border-bottom: 1px solid var(--stroke);
 }
 
@@ -159,17 +162,9 @@ span.name,
   transition: transform 200ms ease;
 }
 
-.archive-accordion[open] .chevron {
+.archive-accordion.is-open .chevron {
   color: var(--text-primary);
   transform: rotate(180deg);
-}
-
-.archive-set-wrapper {
-  flex: 1;
-  min-height: 0;
-  overflow: hidden;
-  display: flex;
-  flex-flow: column nowrap;
 }
 
 .archive-set-list {
@@ -203,7 +198,7 @@ span.name,
   background: var(--button);
   border: 1px solid var(--stroke);
   border-radius: 8px;
-  padding: 10px 17px 10px 14px;
+  padding: 10px 18px 10px 14px;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
